# service/api/api-handler.go
@@ -19,6 +19,11 @@ func (rt *_router) Handler() http.Handler {
 
 	rt.router.PUT("/chat", rt.createConversation)
 	rt.router.GET("/chat/:chat_id", rt.getConversation)
+	rt.router.POST("/chat/:chat_id/users", rt.addToGroup)
+	rt.router.DELETE("/chat/:chat_id/users", rt.leaveGroup)
+	rt.router.POST("/chat/:chat_id/name", rt.setGroupName)
+	rt.router.POST("/chat/:chat_id/description", rt.setGroupDescription)
+	rt.router.POST("/chat/:chat_id/photo", rt.setGroupPhoto)
 
 	rt.router.PUT("/message", rt.sendMessage)
 	rt.router.POST("/message/:message_id", rt.forwardMessage)
@@ -26,16 +31,6 @@ func (rt *_router) Handler() http.Handler {
 
 	rt.router.PUT("/comment", rt.commentMessage)
 	rt.router.DELETE("/comment/:comment_id", rt.uncommentMessage)
-
-	/*	rt.router.DELETE("/chat/:chat_id", rt.leaveGroup)
-		rt.router.POST("/chat/:chat_id/users", rt.addToGroup)
-		rt.router.POST("/chat/:chat_id/name", rt.setGroupName)
-		rt.router.POST("/chat/:chat_id/photo", rt.setGroupPhoto)
-		rt.router.POST("/chat/:chat_id/description", rt.setGroupDescription)
-
-
-
-	*/
 
 	return rt.router
 }
